assets/main.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import "minima";

$primary-color: #1ef7e2eb;
$secondary-color: #2C2E3A;

body {
  color: #000;
}

.center-text {
  text-align: center;
  margin-bottom: 0;
  font-size: 26px;
  font-weight: bold;
  text-decoration: none;
  color: $primary-color;
  padding: 8px 0;
}

.custom-page-content {
  flex: 1 0 auto;
}

.svg-icon {
  width: 16px;
  height: 16px;
  display: inline-block;
  fill: #c0c0c0;
  padding-right: 5px;
  vertical-align: text-top;
}

/* Header */

header {
  padding-left:10px;
  padding-right: 10px
}

.sticky-nav-header {
  position: sticky;
  top: 0px;
  background: $secondary-color;
  z-index: 10;
  height: 55px;
}

.splash-header {
  border-top: 5px solid $secondary-color;
  border-bottom: 1px solid #1e1e1e;;
  min-height: 55.95px;
  position: relative;
  background: $secondary-color;
}

/* social icons in nav bar */

.social-nav-icons {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: right;
  position: absolute;
  top: 3px;
  right: 0;
  li {
    display: inline-block;
  };
  img {
    margin: 5px;
    height: 40px;
    width: 40px
  }
}

/* Logo and title layout */

.site-logo {
  position: absolute;
  left: 20px;
  top: 3px;
}

.site-logo > img {
  height: 65px;  
}

// .custom-site-title {
//   font-size: 26px;
//   font-weight: bold;
//   line-height: 55px;
//   text-decoration: none;
//   color: $primary-color;
// }

// .custom-site-title, .custom-site-title:visited {
//   color: $primary-color;
// }

.custom-site-title:visited {
  color: $primary-color;
}

/* body */

.home section h2 {
  text-align: center;
  margin-bottom: 5rem;
  margin-top: 5rem;
}

.section-header {
  margin-right: 0.25rem;
  margin-left: 0.25rem;
}

.grid-container {
  display: grid;
  grid-template-columns: 310px 310px;
  grid-auto-rows: 145px;
  justify-content: center;
  gap: 35px 35px;
  padding: 10px;
}

.align-image-360 {
   position: relative;
   img {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    max-height: 100%;
    max-width: 100%;
    width: auto;
    height: auto;
    margin: auto;
   }
}

.shady-box-shadow {
  -webkit-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.16);
  -moz-box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.16);
  box-shadow: 0px 0px 15px 4px rgba(0,0,0,0.16);
}

#products h3 a {
  color: #073b7e;
}

/* Product Section */
.box-padding {
  padding: 15px 15px 5px 15px;
}

.status {
  font-weight: bold;
}
.active {
  color: green;
}
.on-hold {
  color: red;
}
.completed {
  color: purple;
}

/* Team Section */
.profile-image {
  -webkit-border-radius: 100px;
  border-radius: 100px;
  width: 100%;
  height: 100%;
  max-width: 200px;
  max-height: 200px;

  -webkit-box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.25);
  -moz-box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.25);
  box-shadow: 0px 1px 1px 0px rgba(0,0,0,0.25);
}

.profile-container {
  overflow: auto;
  position: relative;
}

.role {
  font-size: 2vw;
}

.profile-image-container {
  width: 28%;
  display: inline-block;
  float: left;
}

.profile-info-container {
  width: 70%;
  display: inline-block;
  float: right;
  font-size: 3vw;
  h3, p {
    margin-bottom: 0;
  };
}

.profile-info-contact {
  display: inline-block;
  position: absolute;
  bottom: 0;
  right: 0;
  width: 70%;
  a img {
    width: 22px;
    height: 22px;
    margin-right: 1rem;
  }
}

.team-member-contact {
  font-size: 22px;
  visibility: hidden;
}

#team {
  ol {
    margin-left: 0;
  }

  li {
    padding: 10px;
    list-style: none;
    margin-top: 25px;
    margin-bottom: 25px;
  }
}

/* Donate Button */

.donate-button {
  display: flex;
  justify-content: center;
  align-items: center;
  position: sticky;
  bottom: 0;
  background-color: #fff;
}

.donate-button button:hover {
  opacity: 0.9;
}

.donate-button button {
  background-color: $secondary-color;
  border-radius: 15px;
  font-size: 24px;
  font-weight: 500;
  letter-spacing: 2px;
  margin: 10px 0;
  cursor: pointer;
  width: 150px;
  height: 50px;
  a {
    text-decoration: none;
    color: $primary-color;
  }
}

/* Footer */

.custom-site-footer {
  background: $secondary-color;
  border-top: 1px solid black;
  padding: 30px 0;

  a {
    color: $primary-color;
  }
}

.custom-footer-heading {
  font-size: 18px;
  margin-bottom: 15px;
  color: $primary-color;
}

.footer-col-wrapper {
  font-size: 15px;
  color: #c0c0c0
}

@media (max-width: 660px) {
  .grid-container {
    grid-template-columns: 210px 210px;
    grid-auto-rows: 100px;
  }
}

@media (max-width: 549px) {
  .social-nav-icons {
    top: 12.5px;
    img {
      margin: 3px;
      height: 24px;
      width: 24px;
    }
  }

  .home section h2 {
    text-align: center;
    margin-bottom: 3rem;
    margin-top: 3rem;
  }

  .sticky-nav-header {
    height: 50px;
  }

  .site-logo {
    left: 10px;
  }

  .site-logo > img {
    height: 60px;
  }

  .center-text {
    font-size: 24px;
    padding: 7px 0;
  }

  .profile-info-contact a img {
    width: 16px;
    height: 16px;
    margin-right: 0.5rem;
  }

  .team-member-contact {
    font-size: 16px;
  }
}

@media (max-width: 475px) {
  .grid-container {
    grid-template-columns: 210px;
    grid-auto-rows: 100px;
    justify-content: center;
    gap: 15px 0px;
    padding: 10px;
  }
}

@media (max-width: 375px) {
  .sticky-nav-header {
    height: 45px;
  }

  .site-logo {
    left: 5px;
  }

  .site-logo > img {
    height: 53px;
  }

  .center-text {
    padding: 5px 0;
  }

  .social-nav-icons {
    img {
      margin: 2px;
      height: 20px;
      width: 20px;
    }
  }
}

@media (min-width: 740px) {
  .profile-info-container {
    font-size: 22px;
  }

  .role {
    font-size: 12px;
  }

  .bio {
    font-size: 16px;
  }
}

